--- a/index.html
+++ b/index.html
@@ -7,18 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
         <div class="menu">
                 <nav>
                     <ul>
                         <li><a href="" name="home">HOME</a></li>
-                        <li><a href="#about">WYJAZDY</a></li>
-                        <li><a href="#portfolio">O NAS</a></li>
-                        <li><a href="#contact">KONTAKT</a></li>
+                        <li><a href="#wyjazdy">WYJAZDY</a></li>
+                        <li><a href="#nas">O NAS</a></li>
+                        <li><a href="#kontakt">KONTAKT</a></li>
                     </ul>
                 </nav>
-            </div>
+        </div>
+
+        <div class="gallery">GALLERY</div>
+        <div class="trip container">WYJAZDY</div>
+        <div class="nas container">O NAS</div>
+        <div class="Wojtek element">
+            <img src="img/Wojtek.png"> 
+            <article><a>Wojciech Wojciechowski</a> 
+                <br>Lorem Ipsum jest tekstem stosowanym 
+                jako przykładowy wypełniacz w przemyśle poligraficznym. 
+                Został po raz pierwszy użyty w XV w. przez nieznanego drukarza 
+                do wypełnienia tekstem próbnej książki.</article>
+        </div>
+        <div class="Marcin element">
+            <img src="img/Wojtek.png">
+            <article><a>John Doe</a> 
+                    <br>Lorem Ipsum jest tekstem stosowanym 
+                    jako przykładowy wypełniacz w przemyśle poligraficznym. 
+                    Został po raz pierwszy użyty w XV w. przez nieznanego drukarza 
+                    do wypełnienia tekstem próbnej książki.</article>
+        </div>
+        <div class="Filip element">
+            <img src="img/Wojtek.png">
+            <article><a>John Doe</a> 
+                    <br>Lorem Ipsum jest tekstem stosowanym 
+                    jako przykładowy wypełniacz w przemyśle poligraficznym. 
+                    Został po raz pierwszy użyty w XV w. przez nieznanego drukarza 
+                    do wypełnienia tekstem próbnej książki.</article>
+        </div>
+        </div>
+        <div class="kontakt container">KONTAKT</div>
     
 </body>
 </html>
