add background image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </nav>
         </div>
 
-        <div class="gallery">GALLERY</div>
+        <div class="gallery"></div>
         <div class="trip container">WYJAZDY</div>
         <div class="nas container">O NAS</div>
         <div class="Wojtek element">
