--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>mufcwyjazdy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
@@ -14,42 +14,146 @@
                 <nav>
                     <ul>
                         <li><a href="" name="home">HOME</a></li>
-                        <li><a href="#wyjazdy">WYJAZDY</a></li>
+                        <li><a href="#trip">WYJAZDY</a></li>
                         <li><a href="#nas">O NAS</a></li>
                         <li><a href="#kontakt">KONTAKT</a></li>
+                        <li><img src="img/fb.png" a href="#facebook"></a></li>
+                        <li><img src="img/instagram.png" a href="#instagram"></a></li>
+                        <li><img src="img/twitter.png" a href="#facebook"></a></li>
                     </ul>
                 </nav>
         </div>
 
-        <div class="gallery"></div>
-        <div class="trip container">WYJAZDY</div>
-        <div class="nas container">O NAS</div>
-        <div class="Wojtek element">
-            <img src="img/Wojtek.png"> 
-            <article><a>Wojciech Wojciechowski</a> 
-                <br>Lorem Ipsum jest tekstem stosowanym 
-                jako przykładowy wypełniacz w przemyśle poligraficznym. 
-                Został po raz pierwszy użyty w XV w. przez nieznanego drukarza 
-                do wypełnienia tekstem próbnej książki.</article>
-        </div>
-        <div class="Marcin element">
-            <img src="img/Wojtek.png">
-            <article><a>John Doe</a> 
-                    <br>Lorem Ipsum jest tekstem stosowanym 
-                    jako przykładowy wypełniacz w przemyśle poligraficznym. 
-                    Został po raz pierwszy użyty w XV w. przez nieznanego drukarza 
-                    do wypełnienia tekstem próbnej książki.</article>
-        </div>
-        <div class="Filip element">
-            <img src="img/Wojtek.png">
-            <article><a>John Doe</a> 
-                    <br>Lorem Ipsum jest tekstem stosowanym 
-                    jako przykładowy wypełniacz w przemyśle poligraficznym. 
-                    Został po raz pierwszy użyty w XV w. przez nieznanego drukarza 
-                    do wypełnienia tekstem próbnej książki.</article>
-        </div>
-        </div>
-        <div class="kontakt container">KONTAKT</div>
-    
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="img/1.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/2_2.jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/4_4.jpg" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/5_5.jpg" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="container">
+          <div class="section">WYJAZDY</div>
+                <div class="row">
+                    <div class="col">
+                        <div class="shadow p-3 mb-5 bg-white rounded">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                    <div class="card-body">
+                                        <h5 class="card-title">vs. Young Boys Berno</h5>
+                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                                <div class="shadow p-3 mb-5 bg-white rounded">
+                                    <div class="card" style="width: 18rem;">
+                                        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                            <div class="card-body">
+                                                <h5 class="card-title">vs. Southampton</h5>
+                                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                        <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                        <div class="shadow p-3 mb-5 bg-white rounded">
+                                            <div class="card" style="width: 18rem;">
+                                                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                                    <div class="card-body">
+                                                        <h5 class="card-title">vs. Arsenal</h5>
+                                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                                <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                                      <div class="col">
+                                          <div class="shadow p-3 mb-5 bg-white rounded">
+                                              <div class="card" style="width: 18rem;">
+                                                  <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                                      <div class="card-body">
+                                                          <h5 class="card-title">vs. Fulham</h5>
+                                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                                  <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                                      </div>
+                                                  </div>
+                                              </div>
+                                          </div>
+                                          <div class="col">
+                                                  <div class="shadow p-3 mb-5 bg-white rounded">
+                                                      <div class="card" style="width: 18rem;">
+                                                          <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                                              <div class="card-body">
+                                                                  <h5 class="card-title">vs. Valencia</h5>
+                                                                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                                          <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                                              </div>
+                                                          </div>
+                                                      </div>
+                                                  </div>
+                                                  <div class="col">
+                                                          <div class="shadow p-3 mb-5 bg-white rounded">
+                                                              <div class="card" style="width: 18rem;">
+                                                                  <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                                                      <div class="card-body">
+                                                                          <h5 class="card-title">vs. Liverpool</h5>
+                                                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                                                  <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                                                      </div>
+                                                                  </div>
+                                                              </div>
+                                                          </div>
+                                      </div>
+        <div class="section">O NAS</div>
+        <div class="section">KONTAKT</div>
+        <form>
+         <div class="col">    
+            <div class="form-row">
+                <div class="form-group col-sm-3">
+                    <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                </div>
+                <div class="form-group col-sm-3">
+                    <input type="name" class="form-control" id="inputName" placeholder="Imię i Nazwisko">
+                </div>
+                <div class="form-group col-sm-3">
+                    <input type="text" class="form-control" id="inputMiasto" placeholder="Miasto">
+                </div>
+            </div>
+                <button type="submit" class="btn btn-primary">Wyślij wiadomość</button>
+            </div>
+              </form>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="main.js"></script>    
 </body>
 </html>
