--- a/index.html
+++ b/index.html
@@ -145,11 +145,10 @@
                     <input type="name" class="form-control" id="inputName" placeholder="Imię i Nazwisko">
                 </div>
                 <div class="form-group col-sm-3">
-                    <input type="text" class="form-control" id="inputMiasto" placeholder="Miasto">
+                    <input type="city" class="form-control" id="inputMiasto" placeholder="Miasto">
                 </div>
-            </div>
-                <button type="submit" class="btn btn-primary">Wyślij wiadomość</button>
-            </div>
+                </div>
+                <a href="mailto:mufcwyjazdy@gmail.com" class="send-button">Wyślij wiadomość</a>
               </form>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
