--- a/index.html
+++ b/index.html
@@ -133,7 +133,23 @@
                                                               </div>
                                                           </div>
                                       </div>
-        <div class="section">O NAS</div>
+        <div class="about section">O NAS</div>
+        <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <p>100</p>
+                <article>ZORGANIZOWANYCH WYJAZDÓW</article>
+              </div>
+              <div class="col-sm">
+                <p>1200</p>
+                <article>OSÓB WYJECHAŁO Z NAMI</article>
+              </div>
+              <div class="col-sm">
+                <p>12000</p>
+                <article>MINUT WSPÓLNEJ ZABAWY NA OLD TRAFFORD</article>
+              </div>
+            </div>
+          </div>
         <div class="section">KONTAKT</div>
         <form>
          <div class="col">    
@@ -150,6 +166,7 @@
                 </div>
                 <a href="mailto:mufcwyjazdy@gmail.com" class="send-button">Wyślij wiadomość</a>
               </form>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
