--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" height="90%" src="img/1.jpg" alt="First slide">
+                <img class="d-block w-100" src="img/1.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" height="90%" src="img/2_2.jpg" alt="Second slide">
+                <img class="d-block w-100" src="img/2_2.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" height="90%" src="img/4_4.jpg" alt="Third slide">
+                <img class="d-block w-100" src="img/4_4.jpg" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" height="90%" src="img/5_5.jpg" alt="Third slide">
+                <img class="d-block w-100" src="img/5_5.jpg" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -60,7 +60,7 @@
                     <div class="col">
                         <div class="shadow p-3 mb-5 bg-white rounded">
                             <div class="card" style="width: 18rem;">
-                                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                <img class="card-img-top" src="img/CL_too_late_PNG.png" alt="Card image cap">
                                     <div class="card-body">
                                         <h5 class="card-title">vs. Young Boys Berno</h5>
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -72,7 +72,7 @@
                         <div class="col">
                                 <div class="shadow p-3 mb-5 bg-white rounded">
                                     <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                        <img class="card-img-top" src="img/PL_too_late_PNG.png" alt="Card image cap">
                                             <div class="card-body">
                                                 <h5 class="card-title">vs. Southampton</h5>
                                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -84,7 +84,7 @@
                                 <div class="col">
                                         <div class="shadow p-3 mb-5 bg-white rounded">
                                             <div class="card" style="width: 18rem;">
-                                                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                                <img class="card-img-top" src="img/PL_PNG.png" alt="Card image cap">
                                                     <div class="card-body">
                                                         <h5 class="card-title">vs. Arsenal</h5>
                                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -99,7 +99,7 @@
                                       <div class="col">
                                           <div class="shadow p-3 mb-5 bg-white rounded">
                                               <div class="card" style="width: 18rem;">
-                                                  <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                                  <img class="card-img-top" src="img/PL_PNG.png" alt="Card image cap">
                                                       <div class="card-body">
                                                           <h5 class="card-title">vs. Fulham</h5>
                                                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -111,7 +111,7 @@
                                           <div class="col">
                                                   <div class="shadow p-3 mb-5 bg-white rounded">
                                                       <div class="card" style="width: 18rem;">
-                                                          <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                                          <img class="card-img-top" src="img/CL_PNG.png" alt="Card image cap">
                                                               <div class="card-body">
                                                                   <h5 class="card-title">vs. Valencia</h5>
                                                                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -123,7 +123,7 @@
                                                   <div class="col">
                                                           <div class="shadow p-3 mb-5 bg-white rounded">
                                                               <div class="card" style="width: 18rem;">
-                                                                  <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                                                  <img class="card-img-top" src="img/PL_PNG.png" alt="Card image cap">
                                                                       <div class="card-body">
                                                                           <h5 class="card-title">vs. Liverpool</h5>
                                                                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -137,15 +137,15 @@
         <div class="container">
             <div class="row">
               <div class="col-sm">
-                <p>100</p>
+                <div class="circle">100</div>
                 <article>ZORGANIZOWANYCH WYJAZDÓW</article>
               </div>
               <div class="col-sm">
-                <p>1200</p>
+                <div class="circle">1200</div>
                 <article>OSÓB WYJECHAŁO Z NAMI</article>
               </div>
               <div class="col-sm">
-                <p>12000</p>
+                <div class="circle">12000</div>
                 <article>MINUT WSPÓLNEJ ZABAWY NA OLD TRAFFORD</article>
               </div>
             </div>
