--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
             </a>
           </div>
           <div class="container">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+                in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
+                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                anim id est laborum. </p>
           <div class="section">WYJAZDY</div>
                 <div class="row">
                     <div class="col">
@@ -84,7 +91,7 @@
                                 <div class="col">
                                         <div class="shadow p-3 mb-5 bg-white rounded">
                                             <div class="card" style="width: 18rem;">
-                                                <img class="card-img-top" src="img/PL_PNG.png" alt="Card image cap">
+                                                <img class="card-img-top" src="img/PL_too_late_PNG.png" alt="Card image cap">
                                                     <div class="card-body">
                                                         <h5 class="card-title">vs. Arsenal</h5>
                                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
