--- a/index.html
+++ b/index.html
@@ -88,58 +88,56 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col">
-                                        <div class="shadow p-3 mb-5 bg-white rounded">
-                                            <div class="card" style="width: 18rem;">
-                                                <img class="card-img-top" src="img/PL_too_late_PNG.png" alt="Card image cap">
-                                                    <div class="card-body">
-                                                        <h5 class="card-title">vs. Arsenal</h5>
-                                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                                <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
-                                                    </div>
-                                                </div>
+                        <div class="col">
+                                <div class="shadow p-3 mb-5 bg-white rounded">
+                                    <div class="card" style="width: 18rem;">
+                                        <img class="card-img-top" src="img/PL_too_late_PNG.png" alt="Card image cap">
+                                            <div class="card-body">
+                                                <h5 class="card-title">vs. Arsenal</h5>
+                                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                        <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
                                             </div>
                                         </div>
-                    </div>
-                    <div class="container">
-                        <div class="row">
-                                      <div class="col">
-                                          <div class="shadow p-3 mb-5 bg-white rounded">
-                                              <div class="card" style="width: 18rem;">
-                                                  <img class="card-img-top" src="img/PL_PNG.png" alt="Card image cap">
-                                                      <div class="card-body">
-                                                          <h5 class="card-title">vs. Fulham</h5>
-                                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                                  <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
-                                                      </div>
-                                                  </div>
-                                              </div>
-                                          </div>
-                                          <div class="col">
-                                                  <div class="shadow p-3 mb-5 bg-white rounded">
-                                                      <div class="card" style="width: 18rem;">
-                                                          <img class="card-img-top" src="img/CL_PNG.png" alt="Card image cap">
-                                                              <div class="card-body">
-                                                                  <h5 class="card-title">vs. Valencia</h5>
-                                                                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                                          <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
-                                                              </div>
-                                                          </div>
-                                                      </div>
-                                                  </div>
-                                                  <div class="col">
-                                                          <div class="shadow p-3 mb-5 bg-white rounded">
-                                                              <div class="card" style="width: 18rem;">
-                                                                  <img class="card-img-top" src="img/PL_PNG.png" alt="Card image cap">
-                                                                      <div class="card-body">
-                                                                          <h5 class="card-title">vs. Liverpool</h5>
-                                                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                                                  <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
-                                                                      </div>
-                                                                  </div>
-                                                              </div>
-                                                          </div>
-                                      </div>
+                                    </div>
+                                </div>
+                         <div class="col">
+                                <div class="shadow p-3 mb-5 bg-white rounded">
+                                    <div class="card" style="width: 18rem;">
+                                        <img class="card-img-top" src="img/CL_PNG.png" alt="Card image cap">
+                                            <div class="card-body">
+                                                <h5 class="card-title">vs. Valencia</h5>
+                                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                        <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                         <div class="col">
+                                <div class="shadow p-3 mb-5 bg-white rounded">
+                                    <div class="card" style="width: 18rem;">
+                                        <img class="card-img-top" src="img/PL_PNG.png" alt="Card image cap">
+                                            <div class="card-body">
+                                                <h5 class="card-title">vs. Liverpool</h5>
+                                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                        <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                             </div>
+                                        </div>
+                                    </div>
+                                </div>
+                        <div class="col">
+                                <div class="shadow p-3 mb-5 bg-white rounded">
+                                    <div class="card" style="width: 18rem;">
+                                        <img class="card-img-top" src="img/PL_PNG.png" alt="Card image cap">
+                                            <div class="card-body">
+                                                <h5 class="card-title">vs. Cardiff</h5>
+                                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                         <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                             </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
         <div class="about section">O NAS</div>
         <div class="container">
             <div class="row">
