--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="img/1.jpg" alt="First slide">
+                <img class="d-block w-100" src="img/1_1.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="img/2_2.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/4_4.jpg" alt="Third slide">
+                <img class="d-block w-100" src="img/3_3.jpg" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/5_5.jpg" alt="Third slide">
+                <img class="d-block w-100" src="img/4.jpg" alt="Fourth slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
