change footer, add info to match card, add up circle

--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
                 <nav>
                     <ul>
                         <li><a href="" name="home">HOME</a></li>
-                        <li><a href="#trip">WYJAZDY</a></li>
-                        <li><a href="#nas">O NAS</a></li>
-                        <li><a href="#kontakt">KONTAKT</a></li>
-                        <li><img src="img/fb.png" a href="#facebook"></a></li>
-                        <li><img src="img/instagram.png" a href="#instagram"></a></li>
-                        <li><img src="img/twitter.png" a href="#facebook"></a></li>
+                        <li><a href="#section">WYJAZDY</a></li>
+                        <li><a href="#about section">O NAS</a></li>
+                        <li><a href="#foot">KONTAKT</a></li>
                     </ul>
                 </nav>
         </div>
@@ -54,23 +51,25 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+          <div class="circles"><a href="javascript:scroll(0,0)">
+                <div class="circles-text">^</div>
+            </div></a>
           <div class="container">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
-                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                anim id est laborum. </p>
-          <div class="section">WYJAZDY</div>
+                <p>„To jest Manchester United Football Club, to jest Teatr Marzeń” – od tej frazy wypowiedzianej przez sir Bobby’ego Charltona, niezwykle znamienitą postać i wielką legendę nie tylko United ale w ogóle angielskiego i światowego futbolu wzięło się zwyczajowe, nieco górnolotne określenie piłkarskiego stadionu Old Trafford w Manchesterze. Dla milionów ludzi na całym świecie ten obiekt stanowi jednak prawdziwy Teatr Marzeń, ponieważ wizyta w tym miejscu oznacza spełnienia jednego z największych, życiowych marzeń. Jeśli jesteś członkiem/członkinią tej gigantycznej, ogólnoświatowej społeczności dla której Manchester United to pasja, a Old Trafford swoista „Mekka” i chciałbyś/chciałabyś się tam znaleźć razem z innymi osobami, które podzielają Twój punkt widzenia, trafiłeś/trafiłaś pod właściwy adres!
+                    Było jesienne, sobotnie popołudnie. Dokładnie 8 listopada 2014 roku. Pierwsze miesiące kadencji Luisa van Gaala. Z wizytą do Manchesteru przyjechało londyńskie Crystal Palace. Ot, kolejna ligowa młócka zakończona zwycięstwem Czerwonych Diabłów 1:0 za sprawą bramki Juana Maty z rzutu wolnego. Większość fanów zapewne już dawno zapomniała to pozbawione większej historii spotkanie lecz nie wszyscy. Dla niektórych był to niezapomniany dzień. Był to właśnie ten dzień gdy z naszą pomocą spełnił się ich kibicowski sen. Wtedy bowiem rozpoczęliśmy naszą działalność. 
+                    Od tamtego czasu zorganizowaliśmy już ponad sto wyjazdów na mecze Manchesteru United w różnych rozgrywkach! Premier League, puchary krajowe i europejskie, a nawet spotkania towarzyskie. Mecze z kopciuszkami, średniakami i potentatami. Konfrontacje z Chelsea, Arsenalem, Tottenhamem. Derbowe batalie z Manchesterem City i Liverpoolem. Szlagierowe pojedynki w Lidze Mistrzów. Wszystko to znajduje się w naszej ofercie. Załatwiamy przeloty w obie strony oraz hotel zlokalizowany bardzo blisko Old Trafford. W ramach wyjazdu prócz obejrzenia z trybun meczu, umożliwiamy również  wzięcie udziału w zorganizowanej wycieczce po stadionie a także wstęp do bogatego w pamiątki i trofea klubowego muzeum. Gwarantujemy ponadto opiekę doświadczonego przewodnika i co najistotniejsze – zawsze wyśmienitą atmosferę w grupie. 
+                    Chcesz poczuć klimat piłkarskiego święta na Wyspach? Zapach wspaniałej historii ulatniający się z każdego zakątka Old Trafford? Uczucie gęsiej skórki gdy jesteś częścią ponad 70-tysięcznego tłumu zmierzającego w to samo miejsce i w tym samym celu? Chcesz zobaczyć z bliska piłkarskie gwiazdy? Chcesz  zrobić sobie zdjęcie pod pomnikami Fergusona, Busby’ego bądź legendarnego tercetu: Best – Law – Charlton? Wreszcie chcesz przeżyć kilka fantastycznych dni we wspaniałym gronie osób z którymi łączą Cię pasja i marzenie? Zapraszamy do kontaktu z nami.
+                    </p>
+          <div class="section"><a name="section">WYJAZDY</div></a>
                 <div class="row">
                     <div class="col">
                         <div class="shadow p-3 mb-5 bg-white rounded">
                             <div class="card" style="width: 18rem;">
-                                <img class="card-img-top" src="img/CL_too_late_PNG.png" alt="Card image cap">
+                                <img class="card-img-top" src="img/PL_PNG.png" alt="Card image cap">
                                     <div class="card-body">
-                                        <h5 class="card-title">vs. Young Boys Berno</h5>
-                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <h5 class="card-title">vs. Burnley</h5>
+                                            <p class="card-text">OLD TRAFFORD
+                                                            <br>29/01/2019</p>
                                                 <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
                                     </div>
                                 </div>
@@ -79,10 +78,11 @@
                         <div class="col">
                                 <div class="shadow p-3 mb-5 bg-white rounded">
                                     <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top" src="img/PL_too_late_PNG.png" alt="Card image cap">
+                                        <img class="card-img-top" src="img/PL_PNG.png" alt="Card image cap">
                                             <div class="card-body">
-                                                <h5 class="card-title">vs. Southampton</h5>
-                                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                <h5 class="card-title">vs. Fulham</h5>
+                                                    <p class="card-text">CRAVEN COTTAGE
+                                                                    <br>09/02/2019</p>
                                                         <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
                                             </div>
                                         </div>
@@ -91,22 +91,11 @@
                         <div class="col">
                                 <div class="shadow p-3 mb-5 bg-white rounded">
                                     <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top" src="img/PL_too_late_PNG.png" alt="Card image cap">
-                                            <div class="card-body">
-                                                <h5 class="card-title">vs. Arsenal</h5>
-                                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                        <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                         <div class="col">
-                                <div class="shadow p-3 mb-5 bg-white rounded">
-                                    <div class="card" style="width: 18rem;">
                                         <img class="card-img-top" src="img/CL_PNG.png" alt="Card image cap">
                                             <div class="card-body">
-                                                <h5 class="card-title">vs. Valencia</h5>
-                                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                <h5 class="card-title">vs. PSG</h5>
+                                                    <p class="card-text">OLD TRAFFORD
+                                                                    <br>12/02/2019</p>
                                                         <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
                                             </div>
                                         </div>
@@ -118,7 +107,21 @@
                                         <img class="card-img-top" src="img/PL_PNG.png" alt="Card image cap">
                                             <div class="card-body">
                                                 <h5 class="card-title">vs. Liverpool</h5>
-                                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                    <p class="card-text">OLD TRAFFORD 
+                                                                    <br>24/02/2019</p>
+                                                        <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                         <div class="col">
+                                <div class="shadow p-3 mb-5 bg-white rounded">
+                                    <div class="card" style="width: 18rem;">
+                                        <img class="card-img-top" src="img/PL_PNG.png" alt="Card image cap">
+                                            <div class="card-body">
+                                                <h5 class="card-title">vs. Southampton</h5>
+                                                    <p class="card-text">OLD TRAFFORD
+                                                                    <br>02/03/2019</p>
                                                         <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
                                              </div>
                                         </div>
@@ -129,8 +132,9 @@
                                     <div class="card" style="width: 18rem;">
                                         <img class="card-img-top" src="img/PL_PNG.png" alt="Card image cap">
                                             <div class="card-body">
-                                                <h5 class="card-title">vs. Cardiff</h5>
-                                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                <h5 class="card-title">vs. Manchester City</h5>
+                                                     <p class="card-text">OLD TRAFFORD
+                                                                    <br>16/03/2019</p>
                                                          <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
                                              </div>
                                         </div>
@@ -138,7 +142,7 @@
                                 </div>
                             </div>
                         </div>
-        <div class="about section">O NAS</div>
+        <div class="about section"><a name="about section">O NAS</div></a>
         <div class="container">
             <div class="row">
               <div class="col-sm">
@@ -155,16 +159,13 @@
               </div>
             </div>
           </div>
-        <div class="section">KONTAKT</div>
-        <form>
-         <div class="col">    
-            <div class="form-row">
-                <div class="form-group col-sm-3">
-                    <a href="mailto:mufcwyjazdy@gmail.com" class="send-button">Wyślij wiadomość</a>
-                </div>
+        <div class="foot"><a name="foot"></a>
+            <div class="foot-icons">
+                    <a href="https://www.facebook.com/Wyjazdy-na-Old-Trafford-831015093685853/?epa=SEARCH_BOX"><img src="img/fb.png" alt="tekst alternatywny"></a>
+                    <a href="https://www.instagram.com/mufc_poland_wyjazdy/?fbclid=IwAR0be6g7tH3cup0w2hZMcm5lpms6VoFTGDuFd_-9NrVAr_BBvOKO4tAqJbs"><img src="img/instagram.png" alt="tekst alternatywny"></a>
             </div>
-        </form>
-
+        </div>
+        <script src="http://cookiealert.sruu.pl/CookieAlert-latest.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
