add phone and email in footer

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                         <h5 class="card-title">vs. Burnley</h5>
                                             <p class="card-text">OLD TRAFFORD
                                                             <br>29/01/2019</p>
-                                                <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                                <a href="mailto:mufc.wyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
                                     </div>
                                 </div>
                             </div>
@@ -80,7 +80,7 @@
                                                 <h5 class="card-title">vs. Fulham</h5>
                                                     <p class="card-text">CRAVEN COTTAGE
                                                                     <br>09/02/2019</p>
-                                                        <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                                        <a href="mailto:mufc.wyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
                                             </div>
                                         </div>
                                     </div>
@@ -93,7 +93,7 @@
                                                 <h5 class="card-title">vs. PSG</h5>
                                                     <p class="card-text">OLD TRAFFORD
                                                                     <br>12/02/2019</p>
-                                                        <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                                        <a href="mailto:mufc.wyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
                                             </div>
                                         </div>
                                     </div>
@@ -106,7 +106,7 @@
                                                 <h5 class="card-title">vs. Liverpool</h5>
                                                     <p class="card-text">OLD TRAFFORD 
                                                                     <br>24/02/2019</p>
-                                                        <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                                        <a href="mailto:mufc.wyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
                                             </div>
                                         </div>
                                     </div>
@@ -119,7 +119,7 @@
                                                 <h5 class="card-title">vs. Southampton</h5>
                                                     <p class="card-text">OLD TRAFFORD
                                                                     <br>02/03/2019</p>
-                                                        <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                                        <a href="mailto:mufc.wyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
                                              </div>
                                         </div>
                                     </div>
@@ -132,7 +132,7 @@
                                                 <h5 class="card-title">vs. Manchester City</h5>
                                                      <p class="card-text">OLD TRAFFORD
                                                                     <br>16/03/2019</p>
-                                                         <a href="mailto:mufcwyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                                         <a href="mailto:mufc.wyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
                                              </div>
                                         </div>
                                     </div>
@@ -158,8 +158,12 @@
           </div>
         <div class="foot"><a name="foot"></a>
             <div class="foot-icons">
-                    <a href="https://www.facebook.com/Wyjazdy-na-Old-Trafford-831015093685853/?epa=SEARCH_BOX"><img src="img/fb.png" alt="tekst alternatywny"></a>
-                    <a href="https://www.instagram.com/mufc_poland_wyjazdy/?fbclid=IwAR0be6g7tH3cup0w2hZMcm5lpms6VoFTGDuFd_-9NrVAr_BBvOKO4tAqJbs"><img src="img/instagram.png" alt="tekst alternatywny"></a>
+                    <a href="https://www.facebook.com/Wyjazdy-na-Old-Trafford-831015093685853/?epa=SEARCH_BOX"><img src="img/fb.png" alt="facebook"></a>
+                    <a href="https://www.instagram.com/mufc_poland_wyjazdy/?fbclid=IwAR0be6g7tH3cup0w2hZMcm5lpms6VoFTGDuFd_-9NrVAr_BBvOKO4tAqJbs"><img src="img/instagram.png" alt="instagram"></a>
+            </div>
+            <div class="foot-icons2">
+                    <a href="728508943" alt="phone">728508943</a>
+                    <a href="mufcwyjazdy@gmai.com" alt="mail">mufc.wyjazdy@gmail.com</a>
             </div>
         </div>
         <script src="http://cookiealert.sruu.pl/CookieAlert-latest.min.js"></script>
