--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <nav>
                     <ul>
                         <li><a href="" name="home">HOME</a></li>
-                        <li><a href="#section">WYJAZDY</a></li>
                         <li><a href="#about section">O NAS</a></li>
+                        <li><a href="#section">WYJAZDY</a></li>
                         <li><a href="#foot">KONTAKT</a></li>
                     </ul>
                 </nav>
@@ -51,13 +51,30 @@
           <div class="circles"><a href="javascript:scroll(0,0)">
                 <div class="circles-text">^</div>
             </div></a>
-          <div class="container">
+          <div class="container"><a name="about section"></a> 
                 <p>„To jest Manchester United Football Club, to jest Teatr Marzeń” – od tej frazy wypowiedzianej przez sir Bobby’ego Charltona, niezwykle znamienitą postać i wielką legendę nie tylko United ale w ogóle angielskiego i światowego futbolu wzięło się zwyczajowe, nieco górnolotne określenie piłkarskiego stadionu Old Trafford w Manchesterze. Dla milionów ludzi na całym świecie ten obiekt stanowi jednak prawdziwy Teatr Marzeń, ponieważ wizyta w tym miejscu oznacza spełnienia jednego z największych, życiowych marzeń. Jeśli jesteś członkiem/członkinią tej gigantycznej, ogólnoświatowej społeczności dla której Manchester United to pasja, a Old Trafford swoista „Mekka” i chciałbyś/chciałabyś się tam znaleźć razem z innymi osobami, które podzielają Twój punkt widzenia, trafiłeś/trafiłaś pod właściwy adres!
                     Było jesienne, sobotnie popołudnie. Dokładnie 8 listopada 2014 roku. Pierwsze miesiące kadencji Luisa van Gaala. Z wizytą do Manchesteru przyjechało londyńskie Crystal Palace. Ot, kolejna ligowa młócka zakończona zwycięstwem Czerwonych Diabłów 1:0 za sprawą bramki Juana Maty z rzutu wolnego. Większość fanów zapewne już dawno zapomniała to pozbawione większej historii spotkanie lecz nie wszyscy. Dla niektórych był to niezapomniany dzień. Był to właśnie ten dzień gdy z naszą pomocą spełnił się ich kibicowski sen. Wtedy bowiem rozpoczęliśmy naszą działalność. 
                     Od tamtego czasu zorganizowaliśmy już ponad sto wyjazdów na mecze Manchesteru United w różnych rozgrywkach! Premier League, puchary krajowe i europejskie, a nawet spotkania towarzyskie. Mecze z kopciuszkami, średniakami i potentatami. Konfrontacje z Chelsea, Arsenalem, Tottenhamem. Derbowe batalie z Manchesterem City i Liverpoolem. Szlagierowe pojedynki w Lidze Mistrzów. Wszystko to znajduje się w naszej ofercie. Załatwiamy przeloty w obie strony oraz hotel zlokalizowany bardzo blisko Old Trafford. W ramach wyjazdu prócz obejrzenia z trybun meczu, umożliwiamy również  wzięcie udziału w zorganizowanej wycieczce po stadionie a także wstęp do bogatego w pamiątki i trofea klubowego muzeum. Gwarantujemy ponadto opiekę doświadczonego przewodnika i co najistotniejsze – zawsze wyśmienitą atmosferę w grupie. 
                     Chcesz poczuć klimat piłkarskiego święta na Wyspach? Zapach wspaniałej historii ulatniający się z każdego zakątka Old Trafford? Uczucie gęsiej skórki gdy jesteś częścią ponad 70-tysięcznego tłumu zmierzającego w to samo miejsce i w tym samym celu? Chcesz zobaczyć z bliska piłkarskie gwiazdy? Chcesz  zrobić sobie zdjęcie pod pomnikami Fergusona, Busby’ego bądź legendarnego tercetu: Best – Law – Charlton? Wreszcie chcesz przeżyć kilka fantastycznych dni we wspaniałym gronie osób z którymi łączą Cię pasja i marzenie? Zapraszamy do kontaktu z nami.
                     </p>
-          <div class="section"><a name="section">WYJAZDY</div></a>
+                    <div class="about section">O NAS</div></a>
+                    <div class="container">
+                        <div class="row">
+                          <div class="col-sm">
+                            <div class="circle">105</div>
+                            <article>ZORGANIZOWANYCH WYJAZDÓW</article>
+                          </div>
+                          <div class="col-sm">
+                            <div class="circle">1050</div>
+                            <article>OSÓB WYJECHAŁO Z NAMI</article>
+                          </div>
+                          <div class="col-sm">
+                            <div class="circle">9450</div>
+                            <article>MINUT WSPÓLNEJ ZABAWY NA OLD TRAFFORD</article>
+                          </div>
+                        </div>
+                      </div>  
+        <div class="section"><a name="section">WYJAZDY</div></a>
                 <div class="row">
                     <div class="col">
                         <div class="shadow p-3 mb-5 bg-white rounded">
@@ -139,31 +156,15 @@
                                 </div>
                             </div>
                         </div>
-        <div class="about section"><a name="about section">O NAS</div></a>
-        <div class="container">
-            <div class="row">
-              <div class="col-sm">
-                <div class="circle">105</div>
-                <article>ZORGANIZOWANYCH WYJAZDÓW</article>
-              </div>
-              <div class="col-sm">
-                <div class="circle">1050</div>
-                <article>OSÓB WYJECHAŁO Z NAMI</article>
-              </div>
-              <div class="col-sm">
-                <div class="circle">9450</div>
-                <article>MINUT WSPÓLNEJ ZABAWY NA OLD TRAFFORD</article>
-              </div>
-            </div>
-          </div>
         <div class="foot"><a name="foot"></a>
             <div class="foot-icons">
                     <a href="https://www.facebook.com/Wyjazdy-na-Old-Trafford-831015093685853/?epa=SEARCH_BOX"><img src="img/fb.png" alt="facebook"></a>
                     <a href="https://www.instagram.com/mufc_poland_wyjazdy/?fbclid=IwAR0be6g7tH3cup0w2hZMcm5lpms6VoFTGDuFd_-9NrVAr_BBvOKO4tAqJbs"><img src="img/instagram.png" alt="instagram"></a>
             </div>
-            <div class="foot-icons2">
+            <div class="foot-icons2">        
                     <a href="728508943" alt="phone">728508943</a>
                     <a href="mufcwyjazdy@gmai.com" alt="mail">mufc.wyjazdy@gmail.com</a>
+            </div>
             </div>
         </div>
         <script src="http://cookiealert.sruu.pl/CookieAlert-latest.min.js"></script>
