another change in footer

--- a/index.html
+++ b/index.html
@@ -161,8 +161,10 @@
             <div class="foot-icons">
                     <a href="https://www.facebook.com/Wyjazdy-na-Old-Trafford-831015093685853/?epa=SEARCH_BOX"><img src="img/fb.png" alt="facebook"></a>
                     <a href="https://www.instagram.com/mufc_poland_wyjazdy/?fbclid=IwAR0be6g7tH3cup0w2hZMcm5lpms6VoFTGDuFd_-9NrVAr_BBvOKO4tAqJbs"><img src="img/instagram.png" alt="instagram"></a>
-                    <a href="728508943"><img src="img/phone.png" alt="phone"></a>
-                    <a href="mufcwyjazdy@gmai.com"><img src="img/mail.png" alt="mail"></a>
+            </div>
+            <div class="foot-icons2">        
+                    <a>728508943</a>
+                    <a>mufcwyjazdy@gmai.com</a>
             </div>
             </div>
         <script src="http://cookiealert.sruu.pl/CookieAlert-latest.min.js"></script>
