add file kontakt.html and main-kontakt.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <li><a href="" name="home">HOME</a></li>
                         <li><a href="#about section">O NAS</a></li>
                         <li><a href="#section">WYJAZDY</a></li>
-                        <li><a href="#foot">KONTAKT</a></li>
+                        <li><a href="kontakt.html">KONTAKT</a></li>
                     </ul>
                 </nav>
         </div>
@@ -162,11 +162,7 @@
                     <a href="https://www.facebook.com/Wyjazdy-na-Old-Trafford-831015093685853/?epa=SEARCH_BOX"><img src="img/fb.png" alt="facebook"></a>
                     <a href="https://www.instagram.com/mufc_poland_wyjazdy/?fbclid=IwAR0be6g7tH3cup0w2hZMcm5lpms6VoFTGDuFd_-9NrVAr_BBvOKO4tAqJbs"><img src="img/instagram.png" alt="instagram"></a>
             </div>
-            <div class="foot-icons2">        
-                    <a>728508943</a>
-                    <a>mufcwyjazdy@gmai.com</a>
-            </div>
-            </div>
+        </div>
         <script src="http://cookiealert.sruu.pl/CookieAlert-latest.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
