remove footer from index.html, add fb and instagram in kontakt.html

--- a/kontakt.html
+++ b/kontakt.html
@@ -14,6 +14,10 @@
         <a>728508943</a>
         <a href="mufc.wyjazdy@gmail.com"><img src="img/mail.png"></a>
         <a>mufc.wyjazdy@gmail.com</a>
+        <a href="https://www.facebook.com/Wyjazdy-na-Old-Trafford-831015093685853/"><img src="img/fb.png"></a>
+        <a>Wyjazdy na Old Trafford</a>
+        <a href="https://www.instagram.com/mufc_poland_wyjazdy/?fbclid=IwAR0be6g7tH3cup0w2hZMcm5lpms6VoFTGDuFd_-9NrVAr_BBvOKO4tAqJbs"><img src="img/instagram.png"></a>
+        <a>mufc_poland_wyjazdy</a>
 
 <script src="main.js"></script>
 </body>
