add click phone number

--- a/kontakt.html
+++ b/kontakt.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
-        <a href="+48728508043"><img src="img/phone.png"></a>   
+        <a href="tel:+48728508043"><img src="img/phone.png"></a> 
         <a>728508043</a>
         <a href="mufc.wyjazdy@gmail.com"><img src="img/mail.png"></a>
         <a>mufc.wyjazdy@gmail.com</a>
