add click email adress

--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,7 @@
 <body>
         <a href="tel:+48728508043"><img src="img/phone.png"></a> 
         <a>728508043</a>
-        <a href="mufc.wyjazdy@gmail.com"><img src="img/mail.png"></a>
+        <a href="mailto:mufc.wyjazdy@gmail.com"><img src="img/mail.png"></a>
         <a>mufc.wyjazdy@gmail.com</a>
         <a href="https://www.facebook.com/Wyjazdy-na-Old-Trafford-831015093685853/"><img src="img/fb.png"></a>
         <a>Wyjazdy na Old Trafford</a>
