fix bug in circle and article

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </a>
           </div>
           <div class="circles"><a href="javascript:scroll(0,0)">
-                <div class="circles-text">^</div>
+                <div class="circles-text">^</div></a>
             </div>
                     <div class="container">
                         <div class="row">
